CMake: LFLAGS should be passed to all compilations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,8 @@ IF(A_MAKE_DEBUG_SYMBOLS)
 ENDIF(A_MAKE_DEBUG_SYMBOLS)
 
 IF(A_MAKE_PROFILING)
-	SET(CMAKE_CXX_FLAGS -pg)
+	ADD_DEFINITIONS(-pg)
+    SET(LFLAGS "${LFLAGS} -pg")
 ENDIF(A_MAKE_PROFILING)
 
 IF(A_MAKE_OPTIMIZED)
