--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -42,6 +42,7 @@ SET(TESTS
 FOREACH(var ${EXES})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
     TARGET_LINK_LIBRARIES (${var} ${LIBS})
+    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 ENDFOREACH(var)
 
 FOREACH(var ${TESTS})
