--- a/test/models/CMakeLists.txt
+++ b/test/models/CMakeLists.txt
@@ -32,14 +32,14 @@ SET(TESTS
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
     TARGET_LINK_LIBRARIES (${var} ${LIBS})
-    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
+    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 ENDFOREACH(var)
 
 if(A_USE_VTK)
     FOREACH(var ${VTK_PROGS})
         ADD_EXECUTABLE        (${var} "${var}.cpp")
         TARGET_LINK_LIBRARIES (${var} ${LIBS})
-        SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
+        SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
     ENDFOREACH(var)
 endif(A_USE_VTK)
 
@@ -47,5 +47,5 @@ FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
     ADD_TEST              (${var} ${var})
     TARGET_LINK_LIBRARIES (${var} ${LIBS})
-    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
+    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 ENDFOREACH(var)
