--- a/tfem/CMakeLists.txt
+++ b/tfem/CMakeLists.txt
@@ -27,7 +27,7 @@ SET(TESTS
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
     TARGET_LINK_LIBRARIES (${var} ${LIBS})
-    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
+    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 ENDFOREACH(var)
 
 SUBDIRS (bhatti nonlinear sloan smith_griffiths transient mixed parallel)
