--- a/tfem/sloan/CMakeLists.txt
+++ b/tfem/sloan/CMakeLists.txt
@@ -24,5 +24,5 @@ FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
     #ADD_TEST              (${var} ${var})
     TARGET_LINK_LIBRARIES (${var} ${LIBS})
-    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
+    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 ENDFOREACH(var)
