--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -91,13 +91,13 @@ IF(TETGEN_FOUND AND TRIANGLE_FOUND)
 	ENDFOREACH(var)
 ENDIF(TETGEN_FOUND AND TRIANGLE_FOUND)
 
-IF(wxWidgets_FOUND)
+IF(wxWidgets_FOUND AND USE_WXW)
 	FOREACH(var ${PROGS_G})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(wxWidgets_FOUND)
+ENDIF(wxWidgets_FOUND AND USE_WXW)
 
 
 if (A_USE_VTK)
