--- a/tfem/construction/CMakeLists.txt
+++ b/tfem/construction/CMakeLists.txt
@@ -16,27 +16,11 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-SET(PROGS
-  arch
-  beam02
-  labtest
-  oneelem
-  shapefun)
-
 SET(TESTS
-  beam01)
-
-FOREACH(var ${PROGS})
-    ADD_EXECUTABLE        (${var} "${var}.cpp")
-    TARGET_LINK_LIBRARIES (${var} ${LIBS})
-    SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
-ENDFOREACH(var)
+    activation01)
 
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
-    ADD_TEST              (${var} ${var})
     TARGET_LINK_LIBRARIES (${var} ${LIBS})
     SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 ENDFOREACH(var)
-
-SUBDIRS (benchmark bhatti construction nonlinear sloan smith_griffiths transient mixed parallel verification)
