FEM: Big change: Nodes class completelly rewritten. Maps pU and pF removed. Now Node class has methods to set prescribed U and F

--- a/tfem/mixed/CMakeLists.txt
+++ b/tfem/mixed/CMakeLists.txt
@@ -19,7 +19,7 @@
 SET(TESTS
     mix01
     mix02
-    test-usigelem2)
+    mix03)
 
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
