Blender: problem with GUI and 3D/opengl? should be fixed now. It seems that the problem is with glPushMatrix

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -17,7 +17,7 @@
 ########################################################################
 
 if (NOT A_USE_HDF5)
-    message ("tfem tests need HDF5. Please set A_USE_HDF5 on")
+    message ("tdem tests need HDF5. Please set A_USE_HDF5 on")
 endif (NOT A_USE_HDF5)
 
 SET(EXES
