DEM: tool files added

--- a/tdem/newtests/CMakeLists.txt
+++ b/tdem/newtests/CMakeLists.txt
@@ -19,11 +19,7 @@
 SET(EXES
   dem_test1
   dem_test2
-  dem_test3
-  genpack
-  view_res
-  new_join_res
-  test_paragrid)
+  dem_test3)
 
 FOREACH(var ${EXES})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
