Numerical: ODESolver added

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,8 @@ SET(PROGS_B # tests requiring CGAL
 
 SET(PROGS_C # tests requiring GSL
   quadrature
-  monte_carlo)
+  monte_carlo
+  test_ode1)
 
 SET(PROGS_D # other tests 
  linalg01
