Numerical: Numerical differentiation test added

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(PROGS_B # tests requiring CGAL
 SET(PROGS_C # tests requiring GSL
   quadrature
   monte_carlo
+  test_numdiff1
   test_ode1)
 
 SET(PROGS_D # other tests 
