FEM: Domain: SaveState and LoadState added. Solver: Time is now in Domain, Timestep is static method now.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,7 +28,8 @@ SET(PROGS_C # tests requiring GSL
   quadrature
   monte_carlo
   test_numdiff1
-  test_ode1)
+  test_ode1
+  test_timesteps)
 
 SET(PROGS_D # other tests 
  linalg01
