FEM: RKSolver improved (not working for non-linear problems yet)

--- a/tfem/smith_griffiths/CMakeLists.txt
+++ b/tfem/smith_griffiths/CMakeLists.txt
@@ -29,7 +29,9 @@ SET(PROGS
     fig_06_38
     fig_09_08
     fig_11_01
+    fig_11_01_new
     fig_11_04
+    fig_11_04_new
     fig_11_19)
 
 FOREACH(var ${TESTS})
