GUI: DataPLT improved

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,22 +53,25 @@ SET(PROGS_G # tests requiring wxWidgets
   wxplotxy
   )
 
-IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND FLTK_FOUND)
+
+IF(FLTK_FOUND)
 	FOREACH(var ${PROGS_A})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND FLTK_FOUND)
+else(FLTK_FOUND)
+    message("shit")
+ENDIF(FLTK_FOUND)
 
 
-IF(BLITZ_FOUND AND LINALG_FOUND AND CGAL_FOUND AND Boost_FOUND)
+IF(CGAL_FOUND)
 	FOREACH(var ${PROGS_B})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND CGAL_FOUND AND Boost_FOUND)
+ENDIF(CGAL_FOUND)
 
 
 IF(GSL_FOUND)
@@ -96,15 +99,14 @@ IF(TETGEN_FOUND AND TRIANGLE_FOUND)
 	ENDFOREACH(var)
 ENDIF(TETGEN_FOUND AND TRIANGLE_FOUND)
 
-IF(wxWidgets_FOUND AND A_USE_WXW)
+
+IF(wxWidgets_FOUND)
 	FOREACH(var ${PROGS_G})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ELSE(wxWidgets_FOUND AND A_USE_WXW)
-    message("PROGS_G will not be compiled. Missing = ${MISSING}")
-ENDIF(wxWidgets_FOUND AND A_USE_WXW)
+ENDIF(wxWidgets_FOUND)
 
 
 if (A_USE_VTK)
