tests corrected (test and tfem are OK)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,24 +55,22 @@ SET(PROGS_G # tests requiring wxWidgets
   )
 
 
-IF(FLTK_FOUND)
+IF(FLTK_FOUND AND A_USE_FLTK)
 	FOREACH(var ${PROGS_A})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-else(FLTK_FOUND)
-    message("shit")
-ENDIF(FLTK_FOUND)
+ENDIF(FLTK_FOUND AND A_USE_FLTK)
 
 
-IF(CGAL_FOUND)
+IF(CGAL_FOUND AND A_USE_CGAL)
 	FOREACH(var ${PROGS_B})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(CGAL_FOUND)
+ENDIF(CGAL_FOUND AND A_USE_CGAL)
 
 
 IF(GSL_FOUND)
@@ -101,13 +99,13 @@ IF(TETGEN_FOUND AND TRIANGLE_FOUND)
 ENDIF(TETGEN_FOUND AND TRIANGLE_FOUND)
 
 
-IF(wxWidgets_FOUND)
+IF(wxWidgets_FOUND AND A_USE_WXW)
 	FOREACH(var ${PROGS_G})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(wxWidgets_FOUND)
+ENDIF(wxWidgets_FOUND AND A_USE_WXW)
 
 
 if (A_USE_VTK)
