Numerical: const removed from Diff. MatVec: derivative of unit vector added (with new test)

--- a/test/models/CMakeLists.txt
+++ b/test/models/CMakeLists.txt
@@ -28,7 +28,8 @@ SET(VTK_PROGS
 
 SET(TESTS
   invariants01
-  invariants02)
+  invariants02
+  invariants03)
 
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
