LinAlg: AnisoInvs: derivatives are OK (problem with mSig solved: Eig changes this matrix and must not be used to calculate the traction t)

--- a/test/models/CMakeLists.txt
+++ b/test/models/CMakeLists.txt
@@ -29,7 +29,8 @@ SET(VTK_PROGS
 SET(TESTS
   invariants01
   invariants02
-  invariants03)
+  invariants03
+  invariants04)
 
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
