Models::ElastoPlastic: Generalized FC added. SMPInvs added

--- a/test/models/CMakeLists.txt
+++ b/test/models/CMakeLists.txt
@@ -30,7 +30,8 @@ SET(VTK_PROGS
 SET(TESTS
   invariants01
   invariants02
-  invariants03)
+  invariants03
+  invariants05)
 
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
