LBM: Huge update, LBM-DEM written form scratch

--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -29,7 +29,10 @@ SET(PROGS
     capi
     dam
     porous
-    swell)
+    swell
+    test01
+    test02
+    test03)
 
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
