VTK: SGrid improved with Colormap

--- a/test/vtk/CMakeLists.txt
+++ b/test/vtk/CMakeLists.txt
@@ -23,7 +23,8 @@ SET(PROGS
   objects
   sgridarrows
   triangulation01
-  triangulation02)
+  triangulation02
+  vtk_temperature)
 
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
