--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -35,7 +35,8 @@ SET(PROGS
     test03
     test04
     test05
-    test06)
+    test06
+    test07)
 
 FOREACH(var ${PROGS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
