Compilation: FindVTK.cmake added (not working)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,12 @@ ENABLE_TESTING         ()
 
 # Features                                                                         
 OPTION(A_WITH_PYTHON_MODULE "Create python module (mechsys)" OFF)
-OPTION(A_WITH_TEST          "Compile general tests"          OFF)
-OPTION(A_WITH_TFEM          "Compile FEM tests"              OFF)
+OPTION(A_WITH_TEST          "Compile general tests"          ON )
+OPTION(A_WITH_TFEM          "Compile FEM tests"              ON )
 OPTION(A_WITH_TLBM          "Compile LBM tests"              OFF)
 OPTION(A_WITH_TDEM          "Compile DEM tests"              OFF)
 OPTION(A_WITH_TSPH          "Compile SPH tests"              OFF)
+OPTION(A_WITH_TDOC          "Compile documentation tests"    ON )
 
 # needed when building Debian package
 IF(NOT INSTALL_ROOT)
@@ -82,6 +83,10 @@ ENDIF(A_WITH_TDEM)
 IF(A_WITH_TSPH)
 	SET(ALLDIRS ${ALLDIRS} tsph)
 ENDIF(A_WITH_TSPH)
+
+IF(A_WITH_TDOC)
+	SET(ALLDIRS ${ALLDIRS} tdoc)
+ENDIF(A_WITH_TDOC)
 
 IF(ALLDIRS)
     SUBDIRS(${ALLDIRS})
