--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,7 +30,8 @@ SET(PROGS_C # tests requiring GSL
   test_dunitvec
   test_ode1
   test_root
-  test_timesteps)
+  #test_timesteps
+  )
 
 SET(PROGS_D # other tests 
  linalg01
