--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ OPTION(A_WITH_TFEM          "Compile FEM tests"              ON )
 OPTION(A_WITH_TLBM          "Compile LBM tests"              OFF)
 OPTION(A_WITH_TDEM          "Compile DEM tests"              OFF)
 OPTION(A_WITH_TSPH          "Compile SPH tests"              OFF)
+OPTION(A_WITH_TMPM          "Compile MPM tests"              OFF)
 OPTION(A_WITH_TDOC          "Compile documentation tests"    ON )
 
 # needed when building Debian package
@@ -83,6 +84,10 @@ ENDIF(A_WITH_TDEM)
 IF(A_WITH_TSPH)
 	SET(ALLDIRS ${ALLDIRS} tsph)
 ENDIF(A_WITH_TSPH)
+
+IF(A_WITH_TMPM)
+	SET(ALLDIRS ${ALLDIRS} tmpm)
+ENDIF(A_WITH_TMPM)
 
 IF(A_WITH_TDOC)
 	SET(ALLDIRS ${ALLDIRS} tdoc)
