--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ IF(NOT INSTALL_ROOT)
 ENDIF(NOT INSTALL_ROOT)
 
 INCLUDE_DIRECTORIES (${MECHSYS_SOURCE_DIR})
+#INCLUDE_DIRECTORIES ($ENV{HOME}/pkg/boost_1_49_0)
 
 ### DEPENDENCIES ########################################################################################
 
