binary files ignored

--- a/.hgignore
+++ b/.hgignore
@@ -1,3 +1,78 @@
+tdoc/doc_msh1
+tdoc/doc_msh2
+tdoc/doc_msh3
+test/delaunay
+test/delaunay3D
+test/linalg01
+test/linalg02
+test/linalg03
+test/linalg04
+test/linsolver
+test/mesh01
+test/mesh02
+test/mesh03
+test/mesh04
+test/models/eigenbases
+test/models/invariants01
+test/models/invariants02
+test/models/invariants05
+test/models/test_wrcs
+test/monte_carlo
+test/quadrature
+test/serialize
+test/test_array
+test/test_colors
+test/test_dunitvec
+test/test_maps
+test/test_min1
+test/test_numdiff1
+test/test_ode1
+test/test_paragrid
+test/test_readfiles
+test/test_root
+test/tlaexpr
+tfem/arch
+tfem/beam01
+tfem/beam02
+tfem/benchmark/bench01
+tfem/bhatti/adv_ex_03_01
+tfem/bhatti/ex_01_04
+tfem/bhatti/ex_01_05
+tfem/bhatti/ex_01_06
+tfem/bhatti/ex_01_17
+tfem/bhatti/ex_04_02
+tfem/bhatti/ex_04_06
+tfem/bhatti/ex_04_08
+tfem/bhatti/ex_04_11
+tfem/bhatti/ex_05_03
+tfem/bhatti/ex_06_22
+tfem/bhatti/ex_07_07
+tfem/construction/activation01
+tfem/mixed/mix01
+tfem/mixed/mix02
+tfem/mixed/mix03
+tfem/nonlinear/ep_test
+tfem/nonlinear/nayak_zienk_01
+tfem/nonlinear/owen_hinton_01
+tfem/nonlinear/owen_hinton_02
+tfem/nonlinear/owen_salonen
+tfem/parallel/para01
+tfem/shapefun
+tfem/smith_griffiths/fig_05_02
+tfem/smith_griffiths/fig_05_11
+tfem/smith_griffiths/fig_05_15
+tfem/smith_griffiths/fig_05_17
+tfem/smith_griffiths/fig_05_24
+tfem/smith_griffiths/fig_06_09
+tfem/smith_griffiths/fig_06_35
+tfem/smith_griffiths/fig_06_38
+tfem/smith_griffiths/fig_09_08
+tfem/smith_griffiths/fig_11_01
+tfem/smith_griffiths/fig_11_04
+tfem/smith_griffiths/fig_11_19
+tfem/verification/sap1-001
+
+
 
 syntax: glob
 CTestTestfile.cmake
