compilation/installation of dependencies updated: now mumps, parmetis, and vtk5 are installed from debian's apt. blitz is now installed from our bash script since version 0.10 is incompatible with mechsys

--- a/.hgignore
+++ b/.hgignore
@@ -71,6 +71,7 @@ tfem/smith_griffiths/fig_11_01
 tfem/smith_griffiths/fig_11_04
 tfem/smith_griffiths/fig_11_19
 tfem/verification/sap1-001
+test/graph/cluster01
 
 
 
