DEM: overlap report extended

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -36,8 +36,9 @@ SET(EXES
   figure
   test_01
   test_02
-  test_comm01
-  test_comm02)
+  test_copy)
+  #test_comm01
+  #test_comm02)
 
 SET(TESTS
   test_distances)
