--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,10 @@ ENABLE_TESTING         ()
 OPTION(A_WITH_PYTHON_MODULE "Create python module (mechsys)" OFF)
 OPTION(A_WITH_TEST          "Compile general tests"          ON )
 OPTION(A_WITH_TFEM          "Compile FEM tests"              ON )
-OPTION(A_WITH_TLBM          "Compile LBM tests"              OFF)
-OPTION(A_WITH_TDEM          "Compile DEM tests"              OFF)
-OPTION(A_WITH_TSPH          "Compile SPH tests"              OFF)
-OPTION(A_WITH_TMPM          "Compile MPM tests"              OFF)
+OPTION(A_WITH_TLBM          "Compile LBM tests"              ON )
+OPTION(A_WITH_TDEM          "Compile DEM tests"              ON )
+OPTION(A_WITH_TSPH          "Compile SPH tests"              ON )
+OPTION(A_WITH_TMPM          "Compile MPM tests"              ON )
 OPTION(A_WITH_TDOC          "Compile documentation tests"    ON )
 
 # needed when building Debian package
