Installation scripts: 1) problem with HDF5 and CXX fixed (CXX requirement does not work). 2) some additional modules in FindDEPS were made default (as long all dependencies in install_apt_deps are installed, things should be OK). 3) LBM tests renamed from test##.cpp to tlbm##.cpp to avoid name conflicts.

--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,18 @@
+src/dem_genpack
+src/dem_joinres
+src/dem_viewpack
+src/dem_viewres
 tdoc/doc_msh1
 tdoc/doc_msh2
 tdoc/doc_msh3
+tlbm/tlbm01
+tlbm/tlbm02
+tlbm/tlbm03
+tlbm/tlbm04
+tlbm/tlbm05
+tlbm/tlbm06
+tlbm/tlbm07
+tlbm/tlbm08
 test/delaunay
 test/delaunay3D
 test/linalg01
