EMLBM: First upload

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ OPTION(A_WITH_PYTHON_MODULE "Create python module (mechsys)" OFF)
 OPTION(A_WITH_TEST          "Compile general tests"          OFF)
 OPTION(A_WITH_TFEM          "Compile FEM tests"              OFF)
 OPTION(A_WITH_TLBM          "Compile LBM tests"              ON )
+OPTION(A_WITH_TEMLBM        "Compile EMLBM tests"            ON )
 OPTION(A_WITH_TDEM          "Compile DEM tests"              ON )
 OPTION(A_WITH_TSPH          "Compile SPH tests"              OFF)
 OPTION(A_WITH_TMPM          "Compile MPM tests"              OFF)
@@ -77,6 +78,10 @@ ENDIF(A_WITH_TFEM)
 IF(A_WITH_TLBM)
 	SET(ALLDIRS ${ALLDIRS} tlbm)
 ENDIF(A_WITH_TLBM)
+
+IF(A_WITH_TEMLBM)
+	SET(ALLDIRS ${ALLDIRS} temlbm)
+ENDIF(A_WITH_TEMLBM)
 
 IF(A_WITH_TDEM)
 	SET(ALLDIRS ${ALLDIRS} tdem)
