EMLBM2: New method introduced, seems to reproduce the fields with better accuracy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ IF(A_WITH_TLBM)
 ENDIF(A_WITH_TLBM)
 
 IF(A_WITH_TEMLBM)
-	SET(ALLDIRS ${ALLDIRS} temlbm)
+	SET(ALLDIRS ${ALLDIRS} temlbm temlbm2)
 ENDIF(A_WITH_TEMLBM)
 
 IF(A_WITH_TDEM)
