--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -1,6 +1,6 @@
 ########################################################################
 # MechSys - Open Library for Mechanical Systems                        #
-# Copyright (C) 2005 Dorival M. Pedroso, Raúl D. D. Farfan             #
+# Copyright (C) 2010 Sergio Galindo                                    #
 #                                                                      #
 # This program is free software: you can redistribute it and/or modify #
 # it under the terms of the GNU General Public License as published by #
